# connect_4_cnn

./: .gitignore  README.md  board.py  config.py  game.py  main.py  models.py  nnplayer.py  play_against.py  players.py  pyproject.toml  reqirements.txt  script.py  simple_loader.py  tests.py  transformer.py
