[project]
name = "connect-4-cnn"
version = "0.1.0"
description = "Connect 4 game with CNN-based AI player"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scipy>=1.11.2",
    "tqdm>=4.66.1",
    "wandb>=0.15.0",
    "ipython>=9.4.0",
    "ruff>=0.12.10",
    "einops>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# Uncomment the sections below if you want to use these tools:

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.black]
# line-length = 88
# target-version = ['py38']

# [tool.mypy]
# python_version = "3.8"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
